# learningShares

./: .cursorrules  .env.example  .gitignore  PROJECT_STATUS_REPORT_HE.md  README.md  UpGit.cmd  UpGit.ps1  learningSharesDesktop.spec  loadGit.cmd  loadGit.ps1  pyproject.toml
.streamlit/: config.toml
installer/: learningShares.iss
scripts/: build_windows_installer.ps1  desktop_launcher.py  dev_seed_portfolio.py  ensure_inno_setup.ps1  run_app.py  update_project_status_report.py
src/market_intel/: __init__.py
src/market_intel/agents/final_verdict/: ARCHITECTURE.md
src/market_intel/agents/fundamentals/: ARCHITECTURE.md
src/market_intel/agents/news/: ARCHITECTURE.md
src/market_intel/agents/technical/: ARCHITECTURE.md
src/market_intel/api/: __init__.py  dependencies.py  lifespan.py  main.py
src/market_intel/api/middleware/: exception_handlers.py
src/market_intel/application/: __init__.py
src/market_intel/config/: __init__.py  settings.py
src/market_intel/domain/: __init__.py  errors.py
src/market_intel/infrastructure/: __init__.py
src/market_intel/modules/: __init__.py
src/market_intel/ui/: app.py  bootstrap.py
tests/integration/: test_api_health.py  test_api_routes_presence.py  test_redis_cache.py  test_stock360_final_verdict_schema.py
tests/unit/ui/: test_bidi_text.py  test_blind_csv_io.py  test_placeholder_symbols.py  test_research_story_panel.py  test_session_api_url.py  test_start_here_report.py  test_usd_compact.py
tools/: debug_context_feed.py
tools/nitter-local/: .gitignore  README.md  docker-compose.yml  nitter.conf
(+237 files in other folders)
